feat: add PATCH endpoint, update docs and refactor some code
add PATCH endpoint, update docs and refactor some code
