# docs/openapi-spec.yaml
@@ -146,7 +146,7 @@ paths:
     put:
       tags:
         - v1 > comments
-      summary: update a comment
+      summary: replace a comment
       requestBody:
         content:
           application/json:
@@ -186,7 +186,7 @@ paths:
             X-RateLimit-Reset:
               schema:
                 type: integer
-                example: '17249870296085'
+                example: '17250084958398'
             Content-Type:
               schema:
                 type: string
@@ -198,11 +198,11 @@ paths:
             ETag:
               schema:
                 type: string
-                example: W/"12d-C2lRuw9EM8pwhainOkZgvEumvZQ"
+                example: W/"12d-CUcNDASUfwS87GMc6o41GYWQlC8"
             Date:
               schema:
                 type: string
-                example: Sun, 01 Sep 2024 02:59:26 GMT
+                example: Sun, 01 Sep 2024 08:56:53 GMT
             Connection:
               schema:
                 type: string
@@ -223,7 +223,7 @@ paths:
                   taskId: 6
                   content: Hello World
                   createdAt: '2024-08-31T12:27:33.742Z'
-                  updatedAt: '2024-09-01T02:59:26.325Z'
+                  updatedAt: '2024-09-01T08:56:53.962Z'
                   deletedAt: null
                   user:
                     id: 2
@@ -339,6 +339,94 @@ paths:
               example:
                 data: null
                 error: Not Found
+    patch:
+      tags:
+        - v1 > comments
+      summary: update a comment
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                userId: 2
+                taskId: 6
+                content: Hello World
+      parameters:
+        - name: id
+          in: path
+          schema:
+            type: integer
+          required: true
+          example: '1'
+      responses:
+        '200':
+          description: OK
+          headers:
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            X-RateLimit-Limit:
+              schema:
+                type: integer
+                example: '100'
+            X-RateLimit-Remaining:
+              schema:
+                type: integer
+                example: '99'
+            X-RateLimit-Reset:
+              schema:
+                type: integer
+                example: '17250082146920'
+            Content-Type:
+              schema:
+                type: string
+                example: application/json; charset=utf-8
+            Content-Length:
+              schema:
+                type: integer
+                example: '302'
+            ETag:
+              schema:
+                type: string
+                example: W/"12e-Xo90VCE9s0AEThnpvxopop6itU0"
+            Date:
+              schema:
+                type: string
+                example: Sun, 01 Sep 2024 08:52:31 GMT
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+          content:
+            application/json:
+              schema:
+                type: object
+              example:
+                error: null
+                data:
+                  id: 1
+                  userId: 2
+                  taskId: 6
+                  content: Hello World2
+                  createdAt: '2024-08-31T12:27:33.742Z'
+                  updatedAt: '2024-09-01T08:52:31.503Z'
+                  deletedAt: null
+                  user:
+                    id: 2
+                    username: user2
+                    createdAt: '2024-08-31T08:11:24.301Z'
+                    updatedAt: '2024-08-31T08:11:24.301Z'
+                    deletedAt: null
     delete:
       tags:
         - v1 > comments
@@ -545,7 +633,7 @@ paths:
           in: query
           schema:
             type: integer
-          example: '1'
+          example: '10'
         - name: filters[userId]
           in: query
           schema:
@@ -556,6 +644,16 @@ paths:
           schema:
             type: string
           example: createdAt:asc
+        - name: filters[createdAtStart]
+          in: query
+          schema:
+            type: string
+          example: '2024-08-31'
+        - name: filters[createdAtEnd]
+          in: query
+          schema:
+            type: string
+          example: '2024-09-30'
       responses:
         '200':
           description: OK
@@ -579,7 +677,7 @@ paths:
             X-RateLimit-Reset:
               schema:
                 type: integer
-                example: '17249868680131'
+                example: '17250080151013'
             Content-Type:
               schema:
                 type: string
@@ -587,15 +685,15 @@ paths:
             Content-Length:
               schema:
                 type: integer
-                example: '371'
+                example: '372'
             ETag:
               schema:
                 type: string
-                example: W/"173-VdR5F4moJHGPe45kG2z8SF2AYrA"
+                example: W/"174-2QN/B5gJEdNwX59sPWDBfwIkPoQ"
             Date:
               schema:
                 type: string
-                example: Sun, 01 Sep 2024 02:56:30 GMT
+                example: Sun, 01 Sep 2024 08:49:08 GMT
             Connection:
               schema:
                 type: string
@@ -611,12 +709,12 @@ paths:
               example:
                 error: null
                 data:
-                  - id: 1
+                  - id: 2
                     userId: 1
-                    taskId: 5
+                    taskId: 6
                     content: this is my comment
-                    createdAt: '2024-08-31T12:27:33.742Z'
-                    updatedAt: '2024-08-31T12:29:19.662Z'
+                    createdAt: '2024-09-01T02:57:40.527Z'
+                    updatedAt: '2024-09-01T02:57:40.527Z'
                     deletedAt: null
                     user:
                       id: 1
@@ -628,7 +726,7 @@ paths:
                   total: 1
                   pageCount: 1
                   page: 1
-                  pageSize: 1
+                  pageSize: 10
   /v1/tasks/{id}:
     get:
       tags:
@@ -727,7 +825,7 @@ paths:
     put:
       tags:
         - v1 > tasks
-      summary: update a task
+      summary: replace one task
       requestBody:
         content:
           application/json:
@@ -739,11 +837,13 @@ paths:
                 dueDate: '2024-09-01 12:00:00.000'
                 createdBy: 1
                 labels:
-                  - dev
                   - new
                 assignees:
-                  - 1
                   - 3
+                  - 4
+                storyPoint: 1
+                status: OPEN
+                priority: null
       parameters:
         - name: id
           in: path
@@ -834,6 +934,108 @@ paths:
                   createdBy:
                     id: 1
                     username: user1
+    patch:
+      tags:
+        - v1 > tasks
+      summary: update one
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                title: task5
+                labels:
+                  - good
+                assignees:
+                  - 4
+      parameters:
+        - name: id
+          in: path
+          schema:
+            type: integer
+          required: true
+          example: '5'
+      responses:
+        '200':
+          description: OK
+          headers:
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            X-RateLimit-Limit:
+              schema:
+                type: integer
+                example: '100'
+            X-RateLimit-Remaining:
+              schema:
+                type: integer
+                example: '99'
+            X-RateLimit-Reset:
+              schema:
+                type: integer
+                example: '17250047746459'
+            Content-Type:
+              schema:
+                type: string
+                example: application/json; charset=utf-8
+            Content-Length:
+              schema:
+                type: integer
+                example: '440'
+            ETag:
+              schema:
+                type: string
+                example: W/"1b8-sx9AuYgnjWmStrcRyvmYRNd9BbQ"
+            Date:
+              schema:
+                type: string
+                example: Sun, 01 Sep 2024 07:54:52 GMT
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+          content:
+            application/json:
+              schema:
+                type: object
+              example:
+                error: null
+                data:
+                  id: 5
+                  title: task5
+                  description: this is task 1
+                  dueDate: '2024-09-01T04:00:00.000Z'
+                  priority: null
+                  storyPoint: 1
+                  status: OPEN
+                  createdById: 1
+                  createdAt: '2024-08-31T10:49:21.701Z'
+                  updatedAt: '2024-09-01T07:54:52.587Z'
+                  deletedAt: null
+                  labels:
+                    - label:
+                        id: 35
+                        name: new
+                    - label:
+                        id: 44
+                        name: wow
+                  assignees:
+                    - user:
+                        id: 3
+                        username: user3
+                  createdBy:
+                    id: 1
+                    username: user1
     delete:
       tags:
         - v1 > tasks
@@ -906,16 +1108,11 @@ paths:
           schema:
             type: string
           example: createdAt:asc
-        - name: pagination[page]
+        - name: filters[title]
           in: query
           schema:
-            type: integer
-          example: '1'
-        - name: pagination[pageSize]
-          in: query
-          schema:
-            type: integer
-          example: '1'
+            type: string
+          example: TASk5
       responses:
         '200':
           description: OK
